c_compiler.output
Nonterminals useless in grammar

   enum_specifier
   enumerator_list
   enumerator


Terminals unused in grammar

   ERROR_tok


Rules useless in grammar

  231 enum_specifier: ENUM_tok OPEN_BRACE_tok enumerator_list CLOSE_BRACE_tok
  232               | ENUM_tok identifier OPEN_BRACE_tok enumerator_list CLOSE_BRACE_tok
  233               | ENUM_tok identifier

  234 enumerator_list: enumerator
  235                | enumerator_list COMMA_tok enumerator

  236 enumerator: identifier
  237           | identifier EQUAL_tok constant_expression


Rules useless in parser due to conflicts

    4 $@1: %empty

  128 $@13: %empty


State 0 conflicts: 20 shift/reduce
State 24 conflicts: 20 shift/reduce
State 52 conflicts: 20 reduce/reduce
State 346 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 translation_unit: external_declaration
    2                 | translation_unit external_declaration

    3 external_declaration: function_definition

    4 $@1: %empty

    5 $@2: %empty

    6 external_declaration: $@1 declaration $@2

    7 function_definition: declarator compound_statement

    8 $@3: %empty

    9 $@4: %empty

   10 function_definition: declarator $@3 declaration_list $@4 compound_statement
   11                    | declaration_specifiers declarator compound_statement

   12 $@5: %empty

   13 $@6: %empty

   14 function_definition: declaration_specifiers declarator $@5 declaration_list $@6 compound_statement

   15 declaration: declaration_specifiers SEMI_tok
   16            | declaration_specifiers init_declarator_list SEMI_tok

   17 declaration_list: declaration
   18                 | declaration_list declaration

   19 declaration_specifiers: storage_class_specifier
   20                       | storage_class_specifier declaration_specifiers
   21                       | type_specifier
   22                       | type_specifier declaration_specifiers
   23                       | type_qualifier
   24                       | type_qualifier declaration_specifiers

   25 storage_class_specifier: AUTO_tok
   26                        | REGISTER_tok
   27                        | STATIC_tok
   28                        | EXTERN_tok
   29                        | TYPEDEF_tok

   30 type_specifier: VOID_tok
   31               | CHAR_tok
   32               | SHORT_tok
   33               | INT_tok
   34               | LONG_tok
   35               | FLOAT_tok
   36               | DOUBLE_tok
   37               | SIGNED_tok
   38               | UNSIGNED_tok
   39               | struct_or_union_specifier
   40               | ENUM_tok
   41               | TYPEDEF_NAME_tok

   42 type_qualifier: CONST_tok
   43               | VOLATILE_tok

   44 $@7: %empty

   45 $@8: %empty

   46 struct_or_union_specifier: struct_or_union identifier OPEN_BRACE_tok $@7 struct_declaration_list $@8 CLOSE_BRACE_tok

   47 $@9: %empty

   48 $@10: %empty

   49 struct_or_union_specifier: struct_or_union OPEN_BRACE_tok $@9 struct_declaration_list $@10 CLOSE_BRACE_tok
   50                          | struct_or_union identifier

   51 struct_or_union: STRUCT_tok
   52                | UNION_tok

   53 struct_declaration_list: struct_declaration
   54                        | struct_declaration_list struct_declaration

   55 init_declarator_list: init_declarator
   56                     | init_declarator_list COMMA_tok init_declarator

   57 init_declarator: declarator
   58                | declarator EQUAL_tok initializer

   59 struct_declaration: specifier_qualifier_list struct_declarator_list SEMI_tok

   60 specifier_qualifier_list: type_specifier
   61                         | type_specifier specifier_qualifier_list
   62                         | type_qualifier
   63                         | type_qualifier specifier_qualifier_list

   64 struct_declarator_list: struct_declarator
   65                       | struct_declarator_list COMMA_tok struct_declarator

   66 struct_declarator: declarator
   67                  | COLON_tok constant_expression
   68                  | declarator COLON_tok constant_expression

   69 declarator: direct_declarator
   70           | pointer direct_declarator

   71 direct_declarator: identifier
   72                  | OPEN_PAREN_tok declarator CLOSE_PAREN_tok
   73                  | direct_declarator OPEN_BRACKET_tok CLOSE_BRACKET_tok
   74                  | direct_declarator OPEN_BRACKET_tok constant_expression CLOSE_BRACKET_tok
   75                  | direct_declarator OPEN_PAREN_tok CLOSE_PAREN_tok
   76                  | direct_declarator OPEN_PAREN_tok parameter_type_list CLOSE_PAREN_tok
   77                  | direct_declarator OPEN_PAREN_tok identifier_list CLOSE_PAREN_tok

   78 pointer: STAR_tok
   79        | STAR_tok type_qualifier_list
   80        | STAR_tok pointer
   81        | STAR_tok type_qualifier_list pointer

   82 type_qualifier_list: type_qualifier
   83                    | type_qualifier_list type_qualifier

   84 parameter_type_list: parameter_list
   85                    | parameter_list COMMA_tok ELIPSIS_tok

   86 parameter_list: parameter_declaration
   87               | parameter_list COMMA_tok parameter_declaration

   88 parameter_declaration: declaration_specifiers declarator
   89                      | declaration_specifiers
   90                      | declaration_specifiers abstract_declarator

   91 identifier_list: identifier
   92                | identifier_list COMMA_tok identifier

   93 initializer: assignment_expression
   94            | OPEN_BRACE_tok initializer_list CLOSE_BRACE_tok
   95            | OPEN_BRACE_tok initializer_list COMMA_tok CLOSE_BRACE_tok

   96 initializer_list: initializer
   97                 | initializer_list COMMA_tok initializer

   98 type_name: specifier_qualifier_list
   99          | specifier_qualifier_list abstract_declarator

  100 abstract_declarator: pointer
  101                    | direct_abstract_declarator
  102                    | pointer direct_abstract_declarator

  103 direct_abstract_declarator: OPEN_PAREN_tok abstract_declarator CLOSE_PAREN_tok
  104                           | OPEN_BRACKET_tok CLOSE_BRACKET_tok
  105                           | OPEN_BRACKET_tok constant_expression CLOSE_BRACKET_tok
  106                           | direct_abstract_declarator OPEN_BRACKET_tok CLOSE_BRACKET_tok
  107                           | direct_abstract_declarator OPEN_BRACKET_tok constant_expression CLOSE_BRACKET_tok
  108                           | OPEN_PAREN_tok CLOSE_PAREN_tok
  109                           | OPEN_PAREN_tok parameter_type_list CLOSE_PAREN_tok
  110                           | direct_abstract_declarator OPEN_PAREN_tok CLOSE_PAREN_tok
  111                           | direct_abstract_declarator OPEN_PAREN_tok parameter_type_list CLOSE_PAREN_tok

  112 statement: labeled_statement
  113          | compound_statement
  114          | expression_statement
  115          | selection_statement
  116          | iteration_statement
  117          | jump_statement

  118 labeled_statement: identifier COLON_tok statement
  119                  | CASE_tok constant_expression COLON_tok statement
  120                  | DEFAULT_tok COLON_tok statement

  121 expression_statement: SEMI_tok
  122                     | expression SEMI_tok

  123 compound_statement: OPEN_BRACE_tok CLOSE_BRACE_tok
  124                   | OPEN_BRACE_tok statement_list CLOSE_BRACE_tok

  125 $@11: %empty

  126 $@12: %empty

  127 compound_statement: OPEN_BRACE_tok $@11 declaration_list $@12 CLOSE_BRACE_tok

  128 $@13: %empty

  129 $@14: %empty

  130 compound_statement: OPEN_BRACE_tok $@13 declaration_list $@14 statement_list CLOSE_BRACE_tok

  131 statement_list: statement
  132               | statement_list statement

  133 selection_statement: IF_tok OPEN_PAREN_tok expression CLOSE_PAREN_tok statement
  134                    | IF_tok OPEN_PAREN_tok expression CLOSE_PAREN_tok statement ELSE_tok statement
  135                    | SWITCH_tok OPEN_PAREN_tok expression CLOSE_PAREN_tok statement

  136 iteration_statement: WHILE_tok OPEN_PAREN_tok expression CLOSE_PAREN_tok statement
  137                    | DO_tok statement WHILE_tok OPEN_PAREN_tok expression CLOSE_PAREN_tok SEMI_tok
  138                    | FOR_tok OPEN_PAREN_tok SEMI_tok SEMI_tok CLOSE_PAREN_tok statement
  139                    | FOR_tok OPEN_PAREN_tok SEMI_tok SEMI_tok expression CLOSE_PAREN_tok statement
  140                    | FOR_tok OPEN_PAREN_tok SEMI_tok expression SEMI_tok CLOSE_PAREN_tok statement
  141                    | FOR_tok OPEN_PAREN_tok SEMI_tok expression SEMI_tok expression CLOSE_PAREN_tok statement
  142                    | FOR_tok OPEN_PAREN_tok expression SEMI_tok SEMI_tok CLOSE_PAREN_tok statement
  143                    | FOR_tok OPEN_PAREN_tok expression SEMI_tok SEMI_tok expression CLOSE_PAREN_tok statement
  144                    | FOR_tok OPEN_PAREN_tok expression SEMI_tok expression SEMI_tok CLOSE_PAREN_tok statement
  145                    | FOR_tok OPEN_PAREN_tok expression SEMI_tok expression SEMI_tok expression CLOSE_PAREN_tok statement

  146 jump_statement: GOTO_tok identifier SEMI_tok
  147               | CONTINUE_tok SEMI_tok
  148               | BREAK_tok SEMI_tok
  149               | RETURN_tok SEMI_tok
  150               | RETURN_tok expression SEMI_tok

  151 expression: assignment_expression
  152           | expression COMMA_tok assignment_expression

  153 assignment_expression: conditional_expression
  154                      | unary_expression assignment_operator assignment_expression

  155 assignment_operator: EQUAL_tok
  156                    | MULT_ASSIGN_tok
  157                    | DIV_ASSIGN_tok
  158                    | MOD_ASSIGN_tok
  159                    | ADD_ASSIGN_tok
  160                    | SUB_ASSIGN_tok
  161                    | LEFT_ASSIGN_tok
  162                    | RIGHT_ASSIGN_tok
  163                    | AND_ASSIGN_tok
  164                    | XOR_ASSIGN_tok
  165                    | OR_ASSIGN_tok

  166 conditional_expression: logical_or_expression
  167                       | logical_or_expression QUESTION_MARK_tok expression COLON_tok conditional_expression

  168 constant_expression: conditional_expression

  169 logical_or_expression: logical_and_expression
  170                      | logical_or_expression OR_OP_tok logical_and_expression

  171 logical_and_expression: inclusive_or_expression
  172                       | logical_and_expression AND_OP_tok inclusive_or_expression

  173 inclusive_or_expression: exclusive_or_expression
  174                        | inclusive_or_expression BAR_tok exclusive_or_expression

  175 exclusive_or_expression: and_expression
  176                        | exclusive_or_expression CARET_tok and_expression

  177 and_expression: equality_expression
  178               | and_expression AMP_tok equality_expression

  179 equality_expression: relational_expression
  180                    | equality_expression EQ_OP_tok relational_expression
  181                    | equality_expression NE_OP_tok relational_expression

  182 relational_expression: shift_expression
  183                      | relational_expression LT_tok shift_expression
  184                      | relational_expression GT_tok shift_expression
  185                      | relational_expression LE_OP_tok shift_expression
  186                      | relational_expression GE_OP_tok shift_expression

  187 shift_expression: additive_expression
  188                 | shift_expression LEFT_OP_tok additive_expression
  189                 | shift_expression RIGHT_OP_tok additive_expression

  190 additive_expression: multiplicative_expression
  191                    | additive_expression PLUS_tok multiplicative_expression
  192                    | additive_expression MINUS_tok multiplicative_expression

  193 multiplicative_expression: cast_expression
  194                          | multiplicative_expression STAR_tok cast_expression
  195                          | multiplicative_expression DIV_tok cast_expression
  196                          | multiplicative_expression PERCENT_tok cast_expression

  197 cast_expression: unary_expression
  198                | OPEN_PAREN_tok type_name CLOSE_PAREN_tok cast_expression

  199 unary_expression: postfix_expression
  200                 | INC_OP_tok unary_expression
  201                 | DEC_OP_tok unary_expression
  202                 | unary_operator cast_expression
  203                 | SIZEOF_tok unary_expression
  204                 | SIZEOF_tok OPEN_PAREN_tok type_name CLOSE_PAREN_tok

  205 unary_operator: AMP_tok
  206               | STAR_tok
  207               | PLUS_tok
  208               | MINUS_tok
  209               | TILDA_tok
  210               | NOT_tok

  211 postfix_expression: primary_expression
  212                   | postfix_expression OPEN_BRACKET_tok expression CLOSE_BRACKET_tok
  213                   | postfix_expression OPEN_PAREN_tok CLOSE_PAREN_tok
  214                   | postfix_expression OPEN_PAREN_tok argument_expression_list CLOSE_PAREN_tok
  215                   | postfix_expression PERIOD_tok identifier
  216                   | postfix_expression PTR_OP_tok identifier
  217                   | postfix_expression INC_OP_tok
  218                   | postfix_expression DEC_OP_tok

  219 primary_expression: identifier
  220                   | constant
  221                   | string
  222                   | OPEN_PAREN_tok expression CLOSE_PAREN_tok

  223 argument_expression_list: assignment_expression
  224                         | argument_expression_list COMMA_tok assignment_expression

  225 constant: INTEGER_CONSTANT_tok
  226         | CHARACTER_CONSTANT_tok
  227         | FLOATING_CONSTANT_tok
  228         | ENUMERATION_CONSTANT_tok

  229 string: STRING_LITERAL_tok

  230 identifier: ID_tok


Terminals, with rules where they appear

$end (0) 0
error (256)
AUTO_tok (258) 25
BREAK_tok (259) 148
CASE_tok (260) 119
CHAR_tok (261) 31
CONST_tok (262) 42
CONTINUE_tok (263) 147
DEFAULT_tok (264) 120
DO_tok (265) 137
DOUBLE_tok (266) 36
ELSE_tok (267) 134
ENUM_tok (268) 40
EXTERN_tok (269) 28
FLOAT_tok (270) 35
FOR_tok (271) 138 139 140 141 142 143 144 145
GOTO_tok (272) 146
IF_tok (273) 133 134
INT_tok (274) 33
LONG_tok (275) 34
REGISTER_tok (276) 26
RETURN_tok (277) 149 150
SHORT_tok (278) 32
SIGNED_tok (279) 37
SIZEOF_tok (280) 203 204
STATIC_tok (281) 27
STRUCT_tok (282) 51
SWITCH_tok (283) 135
TYPEDEF_tok (284) 29
UNION_tok (285) 52
UNSIGNED_tok (286) 38
VOID_tok (287) 30
VOLATILE_tok (288) 43
WHILE_tok (289) 136 137
ERROR_tok (290)
ID_tok (291) 230
PLUS_tok (292) 191 207
MINUS_tok (293) 192 208
STAR_tok (294) 78 79 80 81 194 206
SEMI_tok (295) 15 16 59 121 122 137 138 139 140 141 142 143 144 145
    146 147 148 149 150
OPEN_BRACKET_tok (296) 73 74 104 105 106 107 212
CLOSE_BRACKET_tok (297) 73 74 104 105 106 107 212
EQUAL_tok (298) 58 155
COLON_tok (299) 67 68 118 119 120 167
COMMA_tok (300) 56 65 85 87 92 95 97 152 224
OPEN_PAREN_tok (301) 72 75 76 77 103 108 109 110 111 133 134 135 136
    137 138 139 140 141 142 143 144 145 198 204 213 214 222
CLOSE_PAREN_tok (302) 72 75 76 77 103 108 109 110 111 133 134 135 136
    137 138 139 140 141 142 143 144 145 198 204 213 214 222
OPEN_BRACE_tok (303) 46 49 94 95 123 124 127 130
CLOSE_BRACE_tok (304) 46 49 94 95 123 124 127 130
QUESTION_MARK_tok (305) 167
BAR_tok (306) 174
CARET_tok (307) 176
AMP_tok (308) 178 205
GT_tok (309) 184
LT_tok (310) 183
PERCENT_tok (311) 196
TILDA_tok (312) 209
NOT_tok (313) 210
INC_OP_tok (314) 200 217
DEC_OP_tok (315) 201 218
INTEGER_CONSTANT_tok (316) 225
FLOATING_CONSTANT_tok (317) 227
CHARACTER_CONSTANT_tok (318) 226
ENUMERATION_CONSTANT_tok (319) 228
STRING_LITERAL_tok (320) 229
PTR_OP_tok (321) 216
LEFT_OP_tok (322) 188
RIGHT_OP_tok (323) 189
LE_OP_tok (324) 185
GE_OP_tok (325) 186
EQ_OP_tok (326) 180
NE_OP_tok (327) 181
AND_OP_tok (328) 172
OR_OP_tok (329) 170
MULT_ASSIGN_tok (330) 156
DIV_ASSIGN_tok (331) 157
MOD_ASSIGN_tok (332) 158
ADD_ASSIGN_tok (333) 159
SUB_ASSIGN_tok (334) 160
LEFT_ASSIGN_tok (335) 161
RIGHT_ASSIGN_tok (336) 162
AND_ASSIGN_tok (337) 163
XOR_ASSIGN_tok (338) 164
OR_ASSIGN_tok (339) 165
TYPEDEF_NAME_tok (340) 41
ELIPSIS_tok (341) 85
DIV_tok (342) 195
PERIOD_tok (343) 215


Nonterminals, with rules where they appear

$accept (89)
    on left: 0
translation_unit (90)
    on left: 1 2, on right: 0 2
external_declaration (91)
    on left: 3 6, on right: 1 2
$@1 (92)
    on left: 4, on right: 6
$@2 (93)
    on left: 5, on right: 6
function_definition (94)
    on left: 7 10 11 14, on right: 3
$@3 (95)
    on left: 8, on right: 10
$@4 (96)
    on left: 9, on right: 10
$@5 (97)
    on left: 12, on right: 14
$@6 (98)
    on left: 13, on right: 14
declaration (99)
    on left: 15 16, on right: 6 17 18
declaration_list (100)
    on left: 17 18, on right: 10 14 18 127 130
declaration_specifiers (101)
    on left: 19 20 21 22 23 24, on right: 11 14 15 16 20 22 24 88 89
    90
storage_class_specifier (102)
    on left: 25 26 27 28 29, on right: 19 20
type_specifier (103)
    on left: 30 31 32 33 34 35 36 37 38 39 40 41, on right: 21 22 60
    61
type_qualifier (104)
    on left: 42 43, on right: 23 24 62 63 82 83
struct_or_union_specifier (105)
    on left: 46 49 50, on right: 39
$@7 (106)
    on left: 44, on right: 46
$@8 (107)
    on left: 45, on right: 46
$@9 (108)
    on left: 47, on right: 49
$@10 (109)
    on left: 48, on right: 49
struct_or_union (110)
    on left: 51 52, on right: 46 49 50
struct_declaration_list (111)
    on left: 53 54, on right: 46 49 54
init_declarator_list (112)
    on left: 55 56, on right: 16 56
init_declarator (113)
    on left: 57 58, on right: 55 56
struct_declaration (114)
    on left: 59, on right: 53 54
specifier_qualifier_list (115)
    on left: 60 61 62 63, on right: 59 61 63 98 99
struct_declarator_list (116)
    on left: 64 65, on right: 59 65
struct_declarator (117)
    on left: 66 67 68, on right: 64 65
declarator (118)
    on left: 69 70, on right: 7 10 11 14 57 58 66 68 72 88
direct_declarator (119)
    on left: 71 72 73 74 75 76 77, on right: 69 70 73 74 75 76 77
pointer (120)
    on left: 78 79 80 81, on right: 70 80 81 100 102
type_qualifier_list (121)
    on left: 82 83, on right: 79 81 83
parameter_type_list (122)
    on left: 84 85, on right: 76 109 111
parameter_list (123)
    on left: 86 87, on right: 84 85 87
parameter_declaration (124)
    on left: 88 89 90, on right: 86 87
identifier_list (125)
    on left: 91 92, on right: 77 92
initializer (126)
    on left: 93 94 95, on right: 58 96 97
initializer_list (127)
    on left: 96 97, on right: 94 95 97
type_name (128)
    on left: 98 99, on right: 198 204
abstract_declarator (129)
    on left: 100 101 102, on right: 90 99 103
direct_abstract_declarator (130)
    on left: 103 104 105 106 107 108 109 110 111, on right: 101 102
    106 107 110 111
statement (131)
    on left: 112 113 114 115 116 117, on right: 118 119 120 131 132
    133 134 135 136 137 138 139 140 141 142 143 144 145
labeled_statement (132)
    on left: 118 119 120, on right: 112
expression_statement (133)
    on left: 121 122, on right: 114
compound_statement (134)
    on left: 123 124 127 130, on right: 7 10 11 14 113
$@11 (135)
    on left: 125, on right: 127
$@12 (136)
    on left: 126, on right: 127
$@13 (137)
    on left: 128, on right: 130
$@14 (138)
    on left: 129, on right: 130
statement_list (139)
    on left: 131 132, on right: 124 130 132
selection_statement (140)
    on left: 133 134 135, on right: 115
iteration_statement (141)
    on left: 136 137 138 139 140 141 142 143 144 145, on right: 116
jump_statement (142)
    on left: 146 147 148 149 150, on right: 117
expression (143)
    on left: 151 152, on right: 122 133 134 135 136 137 139 140 141
    142 143 144 145 150 152 167 212 222
assignment_expression (144)
    on left: 153 154, on right: 93 151 152 154 223 224
assignment_operator (145)
    on left: 155 156 157 158 159 160 161 162 163 164 165, on right:
    154
conditional_expression (146)
    on left: 166 167, on right: 153 167 168
constant_expression (147)
    on left: 168, on right: 67 68 74 105 107 119
logical_or_expression (148)
    on left: 169 170, on right: 166 167 170
logical_and_expression (149)
    on left: 171 172, on right: 169 170 172
inclusive_or_expression (150)
    on left: 173 174, on right: 171 172 174
exclusive_or_expression (151)
    on left: 175 176, on right: 173 174 176
and_expression (152)
    on left: 177 178, on right: 175 176 178
equality_expression (153)
    on left: 179 180 181, on right: 177 178 180 181
relational_expression (154)
    on left: 182 183 184 185 186, on right: 179 180 181 183 184 185
    186
shift_expression (155)
    on left: 187 188 189, on right: 182 183 184 185 186 188 189
additive_expression (156)
    on left: 190 191 192, on right: 187 188 189 191 192
multiplicative_expression (157)
    on left: 193 194 195 196, on right: 190 191 192 194 195 196
cast_expression (158)
    on left: 197 198, on right: 193 194 195 196 198 202
unary_expression (159)
    on left: 199 200 201 202 203 204, on right: 154 197 200 201 203
unary_operator (160)
    on left: 205 206 207 208 209 210, on right: 202
postfix_expression (161)
    on left: 211 212 213 214 215 216 217 218, on right: 199 212 213
    214 215 216 217 218
primary_expression (162)
    on left: 219 220 221 222, on right: 211
argument_expression_list (163)
    on left: 223 224, on right: 214 224
constant (164)
    on left: 225 226 227 228, on right: 220
string (165)
    on left: 229, on right: 221
identifier (166)
    on left: 230, on right: 46 50 71 91 92 118 146 215 216 219


State 0

    0 $accept: . translation_unit $end

    AUTO_tok          shift, and go to state 1
    CHAR_tok          shift, and go to state 2
    CONST_tok         shift, and go to state 3
    DOUBLE_tok        shift, and go to state 4
    ENUM_tok          shift, and go to state 5
    EXTERN_tok        shift, and go to state 6
    FLOAT_tok         shift, and go to state 7
    INT_tok           shift, and go to state 8
    LONG_tok          shift, and go to state 9
    REGISTER_tok      shift, and go to state 10
    SHORT_tok         shift, and go to state 11
    SIGNED_tok        shift, and go to state 12
    STATIC_tok        shift, and go to state 13
    STRUCT_tok        shift, and go to state 14
    TYPEDEF_tok       shift, and go to state 15
    UNION_tok         shift, and go to state 16
    UNSIGNED_tok      shift, and go to state 17
    VOID_tok          shift, and go to state 18
    VOLATILE_tok      shift, and go to state 19
    ID_tok            shift, and go to state 20
    STAR_tok          shift, and go to state 21
    OPEN_PAREN_tok    shift, and go to state 22
    TYPEDEF_NAME_tok  shift, and go to state 23

    AUTO_tok          [reduce using rule 4 ($@1)]
    CHAR_tok          [reduce using rule 4 ($@1)]
    CONST_tok         [reduce using rule 4 ($@1)]
    DOUBLE_tok        [reduce using rule 4 ($@1)]
    ENUM_tok          [reduce using rule 4 ($@1)]
    EXTERN_tok        [reduce using rule 4 ($@1)]
    FLOAT_tok         [reduce using rule 4 ($@1)]
    INT_tok           [reduce using rule 4 ($@1)]
    LONG_tok          [reduce using rule 4 ($@1)]
    REGISTER_tok      [reduce using rule 4 ($@1)]
    SHORT_tok         [reduce using rule 4 ($@1)]
    SIGNED_tok        [reduce using rule 4 ($@1)]
    STATIC_tok        [reduce using rule 4 ($@1)]
    STRUCT_tok        [reduce using rule 4 ($@1)]
    TYPEDEF_tok       [reduce using rule 4 ($@1)]
    UNION_tok         [reduce using rule 4 ($@1)]
    UNSIGNED_tok      [reduce using rule 4 ($@1)]
    VOID_tok          [reduce using rule 4 ($@1)]
    VOLATILE_tok      [reduce using rule 4 ($@1)]
    TYPEDEF_NAME_tok  [reduce using rule 4 ($@1)]

    translation_unit           go to state 24
    external_declaration       go to state 25
    $@1                        go to state 26
    function_definition        go to state 27
    declaration_specifiers     go to state 28
    storage_class_specifier    go to state 29
    type_specifier             go to state 30
    type_qualifier             go to state 31
    struct_or_union_specifier  go to state 32
    struct_or_union            go to state 33
    declarator                 go to state 34
    direct_declarator          go to state 35
    pointer                    go to state 36
    identifier                 go to state 37


State 1

   25 storage_class_specifier: AUTO_tok .

    $default  reduce using rule 25 (storage_class_specifier)


State 2

   31 type_specifier: CHAR_tok .

    $default  reduce using rule 31 (type_specifier)


State 3

   42 type_qualifier: CONST_tok .

    $default  reduce using rule 42 (type_qualifier)


State 4

   36 type_specifier: DOUBLE_tok .

    $default  reduce using rule 36 (type_specifier)


State 5

   40 type_specifier: ENUM_tok .

    $default  reduce using rule 40 (type_specifier)


State 6

   28 storage_class_specifier: EXTERN_tok .

    $default  reduce using rule 28 (storage_class_specifier)


State 7

   35 type_specifier: FLOAT_tok .

    $default  reduce using rule 35 (type_specifier)


State 8

   33 type_specifier: INT_tok .

    $default  reduce using rule 33 (type_specifier)


State 9

   34 type_specifier: LONG_tok .

    $default  reduce using rule 34 (type_specifier)


State 10

   26 storage_class_specifier: REGISTER_tok .

    $default  reduce using rule 26 (storage_class_specifier)


State 11

   32 type_specifier: SHORT_tok .

    $default  reduce using rule 32 (type_specifier)


State 12

   37 type_specifier: SIGNED_tok .

    $default  reduce using rule 37 (type_specifier)


State 13

   27 storage_class_specifier: STATIC_tok .

    $default  reduce using rule 27 (storage_class_specifier)


State 14

   51 struct_or_union: STRUCT_tok .

    $default  reduce using rule 51 (struct_or_union)


State 15

   29 storage_class_specifier: TYPEDEF_tok .

    $default  reduce using rule 29 (storage_class_specifier)


State 16

   52 struct_or_union: UNION_tok .

    $default  reduce using rule 52 (struct_or_union)


State 17

   38 type_specifier: UNSIGNED_tok .

    $default  reduce using rule 38 (type_specifier)


State 18

   30 type_specifier: VOID_tok .

    $default  reduce using rule 30 (type_specifier)


State 19

   43 type_qualifier: VOLATILE_tok .

    $default  reduce using rule 43 (type_qualifier)


State 20

  230 identifier: ID_tok .

    $default  reduce using rule 230 (identifier)


State 21

   78 pointer: STAR_tok .
   79        | STAR_tok . type_qualifier_list
   80        | STAR_tok . pointer
   81        | STAR_tok . type_qualifier_list pointer

    CONST_tok     shift, and go to state 3
    VOLATILE_tok  shift, and go to state 19
    STAR_tok      shift, and go to state 21

    $default  reduce using rule 78 (pointer)

    type_qualifier       go to state 38
    pointer              go to state 39
    type_qualifier_list  go to state 40


State 22

   72 direct_declarator: OPEN_PAREN_tok . declarator CLOSE_PAREN_tok

    ID_tok          shift, and go to state 20
    STAR_tok        shift, and go to state 21
    OPEN_PAREN_tok  shift, and go to state 22

    declarator         go to state 41
    direct_declarator  go to state 35
    pointer            go to state 36
    identifier         go to state 37


State 23

   41 type_specifier: TYPEDEF_NAME_tok .

    $default  reduce using rule 41 (type_specifier)


State 24

    0 $accept: translation_unit . $end
    2 translation_unit: translation_unit . external_declaration

    $end              shift, and go to state 42
    AUTO_tok          shift, and go to state 1
    CHAR_tok          shift, and go to state 2
    CONST_tok         shift, and go to state 3
    DOUBLE_tok        shift, and go to state 4
    ENUM_tok          shift, and go to state 5
    EXTERN_tok        shift, and go to state 6
    FLOAT_tok         shift, and go to state 7
    INT_tok           shift, and go to state 8
    LONG_tok          shift, and go to state 9
    REGISTER_tok      shift, and go to state 10
    SHORT_tok         shift, and go to state 11
    SIGNED_tok        shift, and go to state 12
    STATIC_tok        shift, and go to state 13
    STRUCT_tok        shift, and go to state 14
    TYPEDEF_tok       shift, and go to state 15
    UNION_tok         shift, and go to state 16
    UNSIGNED_tok      shift, and go to state 17
    VOID_tok          shift, and go to state 18
    VOLATILE_tok      shift, and go to state 19
    ID_tok            shift, and go to state 20
    STAR_tok          shift, and go to state 21
    OPEN_PAREN_tok    shift, and go to state 22
    TYPEDEF_NAME_tok  shift, and go to state 23

    AUTO_tok          [reduce using rule 4 ($@1)]
    CHAR_tok          [reduce using rule 4 ($@1)]
    CONST_tok         [reduce using rule 4 ($@1)]
    DOUBLE_tok        [reduce using rule 4 ($@1)]
    ENUM_tok          [reduce using rule 4 ($@1)]
    EXTERN_tok        [reduce using rule 4 ($@1)]
    FLOAT_tok         [reduce using rule 4 ($@1)]
    INT_tok           [reduce using rule 4 ($@1)]
    LONG_tok          [reduce using rule 4 ($@1)]
    REGISTER_tok      [reduce using rule 4 ($@1)]
    SHORT_tok         [reduce using rule 4 ($@1)]
    SIGNED_tok        [reduce using rule 4 ($@1)]
    STATIC_tok        [reduce using rule 4 ($@1)]
    STRUCT_tok        [reduce using rule 4 ($@1)]
    TYPEDEF_tok       [reduce using rule 4 ($@1)]
    UNION_tok         [reduce using rule 4 ($@1)]
    UNSIGNED_tok      [reduce using rule 4 ($@1)]
    VOID_tok          [reduce using rule 4 ($@1)]
    VOLATILE_tok      [reduce using rule 4 ($@1)]
    TYPEDEF_NAME_tok  [reduce using rule 4 ($@1)]

    external_declaration       go to state 43
    $@1                        go to state 26
    function_definition        go to state 27
    declaration_specifiers     go to state 28
    storage_class_specifier    go to state 29
    type_specifier             go to state 30
    type_qualifier             go to state 31
    struct_or_union_specifier  go to state 32
    struct_or_union            go to state 33
    declarator                 go to state 34
    direct_declarator          go to state 35
    pointer                    go to state 36
    identifier                 go to state 37


State 25

    1 translation_unit: external_declaration .

    $default  reduce using rule 1 (translation_unit)


State 26

    6 external_declaration: $@1 . declaration $@2

    AUTO_tok          shift, and go to state 1
    CHAR_tok          shift, and go to state 2
    CONST_tok         shift, and go to state 3
    DOUBLE_tok        shift, and go to state 4
    ENUM_tok          shift, and go to state 5
    EXTERN_tok        shift, and go to state 6
    FLOAT_tok         shift, and go to state 7
    INT_tok           shift, and go to state 8
    LONG_tok          shift, and go to state 9
    REGISTER_tok      shift, and go to state 10
    SHORT_tok         shift, and go to state 11
    SIGNED_tok        shift, and go to state 12
    STATIC_tok        shift, and go to state 13
    STRUCT_tok        shift, and go to state 14
    TYPEDEF_tok       shift, and go to state 15
    UNION_tok         shift, and go to state 16
    UNSIGNED_tok      shift, and go to state 17
    VOID_tok          shift, and go to state 18
    VOLATILE_tok      shift, and go to state 19
    TYPEDEF_NAME_tok  shift, and go to state 23

    declaration                go to state 44
    declaration_specifiers     go to state 45
    storage_class_specifier    go to state 29
    type_specifier             go to state 30
    type_qualifier             go to state 31
    struct_or_union_specifier  go to state 32
    struct_or_union            go to state 33


State 27

    3 external_declaration: function_definition .

    $default  reduce using rule 3 (external_declaration)


State 28

   11 function_definition: declaration_specifiers . declarator compound_statement
   14                    | declaration_specifiers . declarator $@5 declaration_list $@6 compound_statement

    ID_tok          shift, and go to state 20
    STAR_tok        shift, and go to state 21
    OPEN_PAREN_tok  shift, and go to state 22

    declarator         go to state 46
    direct_declarator  go to state 35
    pointer            go to state 36
    identifier         go to state 37


State 29

   19 declaration_specifiers: storage_class_specifier .
   20                       | storage_class_specifier . declaration_specifiers

    AUTO_tok          shift, and go to state 1
    CHAR_tok          shift, and go to state 2
    CONST_tok         shift, and go to state 3
    DOUBLE_tok        shift, and go to state 4
    ENUM_tok          shift, and go to state 5
    EXTERN_tok        shift, and go to state 6
    FLOAT_tok         shift, and go to state 7
    INT_tok           shift, and go to state 8
    LONG_tok          shift, and go to state 9
    REGISTER_tok      shift, and go to state 10
    SHORT_tok         shift, and go to state 11
    SIGNED_tok        shift, and go to state 12
    STATIC_tok        shift, and go to state 13
    STRUCT_tok        shift, and go to state 14
    TYPEDEF_tok       shift, and go to state 15
    UNION_tok         shift, and go to state 16
    UNSIGNED_tok      shift, and go to state 17
    VOID_tok          shift, and go to state 18
    VOLATILE_tok      shift, and go to state 19
    TYPEDEF_NAME_tok  shift, and go to state 23

    $default  reduce using rule 19 (declaration_specifiers)

    declaration_specifiers     go to state 47
    storage_class_specifier    go to state 29
    type_specifier             go to state 30
    type_qualifier             go to state 31
    struct_or_union_specifier  go to state 32
    struct_or_union            go to state 33


State 30

   21 declaration_specifiers: type_specifier .
   22                       | type_specifier . declaration_specifiers
